...
        transitionBetweenRoutes: false,
        trailing: _currentPage == 1
            ? CupertinoButton(
                padding: const EdgeInsets.all(3),
                onPressed: () => {managePage(databaseService)},
                child: Text(
                  'Create',
                  style: TextStyle(
                      color: CupertinoTheme.of(context).primaryColor,
                      fontWeight: FontWeight.bold),
                ),
              )
            : null,
...
            borderRadius: BorderRadius.circular(10),
            color: CupertinoTheme.of(context).primaryContrastingColor,
          ),
          child: Column(
            children: [
              CupertinoListTile(
                title: const Text('Invite Followers'),
                leading: const Icon(CupertinoIcons.person_3_fill),
                trailing: const Icon(CupertinoIcons.forward),
                onTap: () {
                  Navigator.of(context).push(
                    CupertinoPageRoute(
                        builder: (context) => InviteUserPage(
...
              ),
              Container(
                height: 1,
                color: CupertinoColors.opaqueSeparator.withOpacity(0.2),
              ),
              CupertinoListTile(
                title: const Text('Categories'),
                leading: const Icon(FontAwesomeIcons.tableList),
                trailing: const Icon(CupertinoIcons.forward),
                onTap: () {
                  if (widget.canNavigate) {
                    setState(() {
                      _currentPage = 2;
...
